--- a/snake/views/index.erb
+++ b/snake/views/index.erb
@@ -6,10 +6,16 @@
 </head>
 <body>
 
-  <canvas id="my-canvas" width="600" height="300">
+  <!-- <canvas id="my&#45;canvas" width="600" height="300"> -->
+  <!--   canvas cannot be displayed -->
+  <!-- </canvas> -->
+
+  <canvas id="clock" width="600" height="600">
     canvas cannot be displayed
   </canvas>
+
   <script type="text/javascript" src="/js/jquery.min.js"> </script>
-  <script type="text/javascript" src="/js/snake.js"> </script>
+  <!-- <script type="text/javascript" src="/js/snake.js"> </script> -->
+  <script type="text/javascript" src="/js/clock.js"> </script>
 </body>
 </html>
